--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
         <!-- JUMBOTRON -->
         <div class="row">
           <header id="banner" class="col-xs-12 col-sm-12 col-lg-12">
-            {% img banner.png class:'img-rounded img-responsive' alt:'{{ site.title }} Banner' %}
+            {% img banner.png class:'img-rounded img-responsive' alt:'{{ site.logo_alt }}' %}
           </header>
         </div>
 
