Optimize main banner (make it jpg)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="{{ site.url }}{{ site.baseurl }}" />
     <meta property="og:site_name" content="{{ site.title }}"/>
     <meta property="og:description" content="{{ site.description }}" />
-    <meta property="og:image" content="{{ site.url }}{% asset_path banner.png %}" />
+    <meta property="og:image" content="{{ site.url }}{% asset_path banner.jpg %}" />
 
     {% css main %}
   </head>
@@ -44,7 +44,7 @@
         <!-- JUMBOTRON -->
         <div class="row">
           <header id="banner" class="col-xs-12 col-sm-12 col-lg-12">
-            {% img banner.png class:'img-rounded img-responsive' alt:'{{ site.logo_alt }}' %}
+            {% img banner.jpg class:'img-rounded img-responsive' alt:'{{ site.logo_alt }}' %}
           </header>
         </div>
 
