Some reorgs and publishing accepted papers

--- a/_assets/css/_customizations.scss
+++ b/_assets/css/_customizations.scss
@@ -33,3 +33,12 @@ table.hotel {
     width: 100%;
     padding-bottom:1em
 }
+
+.program>.list-group-item>h5 {
+    font-weight: bold;
+    margin-bottom: 0px;
+}
+
+.program>.list-group-item>p {
+    margin-bottom: 0px;
+}
