--- a/_assets/css/_customizations.scss
+++ b/_assets/css/_customizations.scss
@@ -42,3 +42,7 @@ table.hotel {
 .program>.list-group-item>p {
     margin-bottom: 0px;
 }
+
+.list-group-item-break {
+    background-color: #DCDCDC;
+}
