--- a/_includes/program.html
+++ b/_includes/program.html
@@ -3,9 +3,9 @@
     {% for item in include.data %}
       {% if    item.type == "day"         %}
         {% assign progdate = item.time | downcase | split: "," | first %}{% assign progitemclass = "prog-" | append: progdate %}
-        <li class="panel panel-primary {{ progitemclass }}">
-          <div class="panel-heading"><h3>{{ item.time }}{% if item.room and item.room != "" %}, {{ item.room }}{% endif %}</h3></div>       
-        </li>
+        <div class="list-group-item active">
+          <h3>{{ item.time }}{% if item.room and item.room != "" %}, {{ item.room }}{% endif %}</h3>
+        </div>
       {% elsif item.type == "break"       %}
         {% assign session = item %}{% include tprog-session.html is_break = true%}
       {% elsif item.type == "description" or item.type == "disc" %}
