--- a/_includes/news.html
+++ b/_includes/news.html
@@ -4,7 +4,7 @@
     <div class="panel panel-default">
       <div class="panel-heading">
         <div class="panel-title panel-title-style">
-          <i class="fa fa-newspaper-o" aria-hidden="true"></i>&nbsp; <b>Latest News</b>
+          <i class="fa fa-newspaper" aria-hidden="true"></i>&nbsp; <b>Latest News</b>
         </div>
       </div>
       <div class="panel-body">
