--- a/_includes/program.html
+++ b/_includes/program.html
@@ -2,6 +2,7 @@
   <div class="program list-group">
     {% for item in include.data %}
       {% if    item.type == "day"         %}
+        <br/>
         {% assign progdate = item.time | downcase | split: "," | first %}{% assign progitemclass = "prog-" | append: progdate %}
         <div class="list-group-item active">
           <h3>{{ item.time }}{% if item.room and item.room != "" %}, {{ item.room }}{% endif %}</h3>
@@ -21,7 +22,7 @@
       {% elsif item.type == "workshop"     %}
         {% assign session = item %}{% include tprog-workshop.html %}
       {% elsif item.type == "social"      %}
-        {% include tprog-social.html %}
+        {% assign paper = item %}{% include tprog-item.html %}
       {% elsif item.type == "talk"        %}
         {% assign keynote = item %}{% include tprog-talk.html %}
       {% elsif item.type == "remote"        %}
