--- a/_includes/tprog-keynote.html
+++ b/_includes/tprog-keynote.html
@@ -14,6 +14,22 @@
      if has_link and has_slides %}{% assign item_style = 'style="width: 78%"' %}{% endif %}{%
      if has_link and has_slides and has_video %}{% assign item_style = 'style="width: 70%"' %}{% endif %}
 
+  <div class="list-group-item">
+  <h5>
+    {{ keynote.time }}&nbsp;&nbsp;&nbsp;
+    {% if has_link %}
+      <a href="{{ keynote.link }}" rel="external" target="_blank" class="ui-link">{{ keynote.title }}</a>
+    {% else %}
+      {{ keynote.title }}
+    {% endif %}  
+  </h5>
+  <!-- /* the spaces after various "%s" below are important for correct list filtering! */ -->
+  <p>{{ keynote.authors | replace_regex: '\(([^\)]*)\)', '<em>(\1)</em>'}}</p>
+</div>
+
+
+{% comment %}
+  
   <li data-icon="false" class="prog-item {{ progitemclass }} prog-keynote">
 
     {% if keynote.title and keynote.title != "" %}
@@ -66,5 +82,6 @@
         <p>&nbsp;</p>
       {% endif %}
     {% endif %}
-  </li>
+
+    {% endcomment %}
 {% endif %}
