--- a/_includes/tprog-keynote.html
+++ b/_includes/tprog-keynote.html
@@ -3,6 +3,7 @@
   {% assign paper.title = "Keynote: " | append: keynote.title %}
   {% include tprog-item.html %}
 {% else %}
+
   {% if keynote.bio    and keynote.bio    != "" %}{% assign has_bio    = true %}{% else %}{% assign has_bio   = nil %}{% endif %}
   {% if keynote.abstract and keynote.abstract != "" %}{% assign has_abstract = true %}{% else %}{% assign has_abstract = nil %}{% endif %}
   {% if keynote.link   and keynote.link   != "" %}{% assign has_link   = true %}{% else %}{% assign has_link   = nil %}{% endif %}
@@ -11,77 +12,98 @@
 
   {% comment %}<!-- make space for the button(s) -->{% endcomment %}
   {% if has_link or  has_slides %}{% assign item_style = 'style="width: 85%"' %}{% endif %}{%
-     if has_link and has_slides %}{% assign item_style = 'style="width: 78%"' %}{% endif %}{%
-     if has_link and has_slides and has_video %}{% assign item_style = 'style="width: 70%"' %}{% endif %}
+                                                                                           if has_link and has_slides %}{% assign item_style = 'style="width: 78%"' %}{% endif %}{%
+                                                                                                                                                                                 if has_link and has_slides and has_video %}{% assign item_style = 'style="width: 70%"' %}{% endif %}
+  {% assign expanded = true %}
+  {% unless collapsible %}
+    {% assign collapsible = 1 %}
+{% else %}
+    {% assign collapsible = collapsible | plus: 1 %}
+  {% endunless %}
 
-  <div class="list-group-item">
-  <h5>
-    {{ keynote.time }}&nbsp;&nbsp;&nbsp;
-    {% if has_link %}
-      <a href="{{ keynote.link }}" rel="external" target="_blank" class="ui-link">{{ keynote.title }}</a>
-    {% else %}
-      {{ keynote.title }}
-    {% endif %}  
-  </h5>
-  <!-- /* the spaces after various "%s" below are important for correct list filtering! */ -->
-  <p>{{ keynote.authors | replace_regex: '\(([^\)]*)\)', '<em>(\1)</em>'}}</p>
-</div>
+  <div class="panel panel-info">
+    <div class="panel-heading">
+      <h5 class="panel-title">
+        <a data-toggle="collapse" data-target="#collapsibleKeynote{{ collapsible }}">
+          {{ keynote.time }}&nbsp;&nbsp;&nbsp;
+          {{ keynote.title }}
+          <span class="pull-right clickable {% unless expanded %}panel-collapsed{% endunless %}"><i class="glyphicon glyphicon-chevron-{% if expanded %}up{% else %}down{% endif %}"></i></span>
+        </a>
+      </h5>
 
-
-{% comment %}
-  
-  <li data-icon="false" class="prog-item {{ progitemclass }} prog-keynote">
-
-    {% if keynote.title and keynote.title != "" %}
-    <h2 {{ item_style }}>
-      Keynote:
-      {% if has_link %}
-        <a href="{{ keynote.link }}" rel="external" target="_blank" style="color: black;">{{ keynote.title }}</a>
-      {% else %}
-        {{ keynote.title }}
-      {% endif %}
-    </h2>
-    {% endif %}
-
-    <div class="ui-li-aside">
-      {% if has_link %}
-        <div class="button-paper">
-          <a href="{{ keynote.link }}" onclick="event.stopPropagation();" rel="external" target="_blank" class="ui-link">Paper</a>
-        </div>
-      {% endif %}
-      {% if has_slides %}
-        <div class="button-paper">
-          <a href="{{ keynote.slides }}" onclick="event.stopPropagation();" rel="external" target="_blank" class="ui-link">Slides</a>
-        </div>
-      {% endif %}
-      {% if has_video %}
-        <div class="button-paper">
-          <a href="{{ keynote.video }}" onclick="event.stopPropagation();" rel="external" target="_blank" class="ui-link">Video</a>
-        </div>
+      <p>{% if has_link %}<a href="{{  keynote.link }}">{% endif %}{{ keynote.authors | replace_regex: '\(([^\)]*)\)', '<em>(\1)</em>'}}{% if has_link %}</a>{% endif %}</p>
+    </div>
+    <div id="collapsibleKeynote{{ collapsible }}" class="panel-body small collapse {% if expanded %}in{% else %}out{% endif %}">
+      {% if has_abstract or has_bio %}
+        {% if has_abstract %}
+          <p>
+            <b>Abstract: </b>{{ keynote.abstract }}
+          </p>
+        {% endif %}
+        {% if has_bio %}
+          <p>
+            {% if keynote.photo and keynote.photo != "" %}<img class="keynote-photo" src="{{ keynote.photo }}"/>{% endif %}
+            <b>Bio: </b>{{ keynote.bio }}
+          </p>
+        {% endif %}
       {% endif %}
     </div>
-
-    <p {{ item_style }}>
-      {{ keynote.authors | replace_regex: '\(([^\)]*)\)', '<em>(\1)</em>'}}
-    </p>
-    {% if has_abstract or has_bio %}
-      {% if keynote.title and keynote.title != "" %}
-        <hr class="keynote-divider" />
-      {% endif %}
-      {% if has_abstract %}
-        <p>
-          <b>Abstract: </b>{{ keynote.abstract }}
-        </p>
-        <p>&nbsp;</p>
-      {% endif %}
-      {% if has_bio %}
-        <p>
-          {% if keynote.photo and keynote.photo != "" %}<img class="keynote-photo" src="{{ keynote.photo }}"/>{% endif %}
-          <b>Bio: </b>{{ keynote.bio }}
-        </p>
-        <p>&nbsp;</p>
-      {% endif %}
-    {% endif %}
-
-    {% endcomment %}
+  </div>
 {% endif %}
+  {% comment %}
+
+  <li data-icon="false" class="prog-item {{ progitemclass }} prog-keynote">
+
+  {% if keynote.title and keynote.title != "" %}
+  <h2 {{ item_style }}>
+  Keynote:
+  {% if has_link %}
+  <a href="{{ keynote.link }}" rel="external" target="_blank" style="color: black;">{{ keynote.title }}</a>
+  {% else %}
+  {{ keynote.title }}
+  {% endif %}
+  </h2>
+  {% endif %}
+
+  <div class="ui-li-aside">
+  {% if has_link %}
+  <div class="button-paper">
+  <a href="{{ keynote.link }}" onclick="event.stopPropagation();" rel="external" target="_blank" class="ui-link">Paper</a>
+  </div>
+  {% endif %}
+  {% if has_slides %}
+  <div class="button-paper">
+  <a href="{{ keynote.slides }}" onclick="event.stopPropagation();" rel="external" target="_blank" class="ui-link">Slides</a>
+  </div>
+  {% endif %}
+  {% if has_video %}
+  <div class="button-paper">
+  <a href="{{ keynote.video }}" onclick="event.stopPropagation();" rel="external" target="_blank" class="ui-link">Video</a>
+  </div>
+  {% endif %}
+  </div>
+
+  <p {{ item_style }}>
+  {{ keynote.authors | replace_regex: '\(([^\)]*)\)', '<em>(\1)</em>'}}
+  </p>
+  {% if has_abstract or has_bio %}
+  {% if keynote.title and keynote.title != "" %}
+  <hr class="keynote-divider" />
+  {% endif %}
+  {% if has_abstract %}
+  <p>
+  <b>Abstract: </b>{{ keynote.abstract }}
+  </p>
+  <p>&nbsp;</p>
+  {% endif %}
+  {% if has_bio %}
+  <p>
+  {% if keynote.photo and keynote.photo != "" %}<img class="keynote-photo" src="{{ keynote.photo }}"/>{% endif %}
+  <b>Bio: </b>{{ keynote.bio }}
+  </p>
+  <p>&nbsp;</p>
+  {% endif %}
+  {% endif %}
+
+  {% endif %}
+  {% endcomment %}
