--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@
         <div class="row">
           <div class="footer">
             <div class="col-sm-offset-3 col-md-8 col-md-offset-3">
-              <p>© Copyright 2017 </p>
+              <p>© Copyright 2017-2018 Alex Afanasyev, Creative Commons License, <a href="https://github.com/conference-websites/MobiHoc-2018" target="_blank">Source</a></p>
             </div>
           </div>
         </div>
