--- a/_assets/css/_customizations.scss
+++ b/_assets/css/_customizations.scss
@@ -60,3 +60,8 @@ table.hotel {
 .program .panel {
     margin-bottom: 0px;
 }
+
+.keynote-photo {
+    float: right;
+    margin: 0px 0px 15px 15px;
+}
