Add printable program

--- a/_assets/css/main.scss
+++ b/_assets/css/main.scss
@@ -16,5 +16,6 @@ $headings-font-weight:    500 !default;
 
 @import 'callouts';
 
+@import 'print-font-fix';
 @import 'original-mobihoc';
 @import 'customizations';
