--- a/_includes/program.html
+++ b/_includes/program.html
@@ -4,7 +4,7 @@
       {% if    item.type == "day"         %}
         <br/>
         {% assign progdate = item.time | downcase | split: "," | first %}{% assign progitemclass = "prog-" | append: progdate %}
-        <div class="list-group-item active">
+        <div class="list-group-item active" {%  comment %}{% unless forloop.first%} style="page-break-before: always;"{% endunless %}{% endcomment %}>
           <h3>{{ item.time }}{% if item.room and item.room != "" %}, {{ item.room }}{% endif %}</h3>
         </div>
       {% elsif item.type == "break"       %}
