--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -52,6 +52,10 @@ div.list-group-item {
 page-break-inside: avoid;
 }
 
+div.panel {
+page-break-inside: avoid;
+}
+
 h3, .program h3 {
 font-size: 16px;
 }
@@ -78,6 +82,11 @@ color: #ffffff;
 padding-top: 5px;
 padding-bottom: 5px;
 }
+
+.panel-default>.panel-heading {
+background-color: #ffffff;
+}
+
 
 </style>
 
