--- a/_includes/program-online.html
+++ b/_includes/program-online.html
@@ -1,2 +1,2 @@
 {% assign data=site.data.program[include.type] %}
-{% include program.html type=include.type data=data %}
+{% include program.html type=include.type data=data date=include.date %}
