--- a/_includes/program.html
+++ b/_includes/program.html
@@ -1,33 +1,39 @@
 <div id="{{ include.type }}-program" class="{{ include.type }}-program">
   <div class="program list-group">
     {% for item in include.data %}
-      {% if    item.type == "day"         %}
-        {% unless forloop.first %}<br/>{% endunless %}
-        {% assign progdate = item.time | downcase | split: "," | first %}{% assign progitemclass = "prog-" | append: progdate %}
-        <div class="list-group-item active" {%  comment %}{% unless forloop.first %} style="page-break-before: always;"{% endunless %}{% endcomment %}>
-          <h3>{{ item.time }}{% if item.room and item.room != "" %}, {{ item.room }}{% endif %}</h3>
-        </div>
-      {% elsif item.type == "break"       %}
-        {% assign session = item %}{% include tprog-session.html is_break = true%}
-      {% elsif item.type == "description" or item.type == "disc" %}
-        {% assign paper = item %}{% include tprog-item.html %}
-      {% elsif item.type == "keynote"     %}
-        {% assign keynote = item %}{% include tprog-keynote.html %}
-      {% elsif item.type == "paper" or item.type == "poster" or item.type == "demo" %}
-        {% assign paper = item %}{% include tprog-paper.html %}
-      {% elsif item.type == "session"     %}
-        {% assign session = item %}{% include tprog-session.html %}
-      {% elsif item.type == "tutorial"     %}
-        {% assign session = item %}{% include tprog-tutorial.html %}
-      {% elsif item.type == "workshop"     %}
-        {% assign session = item %}{% include tprog-workshop.html %}
-      {% elsif item.type == "social"      %}
-        {% assign paper = item %}{% include tprog-item.html %}
-      {% elsif item.type == "talk"        %}
-        {% assign keynote = item %}{% include tprog-talk.html %}
-      {% elsif item.type == "remote"        %}
-        {% assign paper = item %}{% include tprog-remote.html %}
+      {% if item.type == "day" %}
+        {% assign progdate = item.time | date: "%Y-%m-%d" %}
       {% endif %}
+
+      {% unless include.date and include.date != progdate %}
+        {% if    item.type == "day"         %}
+          {% unless forloop.first %}<br/>{% endunless %}
+          {% assign progweekdate = item.time | downcase | split: "," | first %}{% assign progitemclass = "prog-" | append: progdate %}
+          <div class="list-group-item active" {%  comment %}{% unless forloop.first %} style="page-break-before: always;"{% endunless %}{% endcomment %}>
+            <h3>{{ item.time }}{% if item.room and item.room != "" %}, {{ item.room }}{% endif %}</h3>
+          </div>
+        {% elsif item.type == "break"       %}
+          {% assign session = item %}{% include tprog-session.html is_break = true%}
+        {% elsif item.type == "description" or item.type == "disc" %}
+          {% assign paper = item %}{% include tprog-item.html %}
+        {% elsif item.type == "keynote"     %}
+          {% assign keynote = item %}{% include tprog-keynote.html %}
+        {% elsif item.type == "paper" or item.type == "poster" or item.type == "demo" %}
+          {% assign paper = item %}{% include tprog-paper.html %}
+        {% elsif item.type == "session"     %}
+          {% assign session = item %}{% include tprog-session.html %}
+        {% elsif item.type == "tutorial"     %}
+          {% assign session = item %}{% include tprog-tutorial.html %}
+        {% elsif item.type == "workshop"     %}
+          {% assign session = item %}{% include tprog-workshop.html %}
+        {% elsif item.type == "social"      %}
+          {% assign paper = item %}{% include tprog-item.html %}
+        {% elsif item.type == "talk"        %}
+          {% assign keynote = item %}{% include tprog-talk.html %}
+        {% elsif item.type == "remote"        %}
+          {% assign paper = item %}{% include tprog-remote.html %}
+        {% endif %}
+      {% endunless %}
     {% endfor %}
   </div>
 </div>
